--- a/templates/home/password_reset_done.html
+++ b/templates/home/password_reset_done.html
@@ -1,8 +1,36 @@
 {% extends 'base.html' %}
 
 {% block title %}Donors{% endblock title %}
+{% block css %}
+<style>
+  #outer {
+    position: relative;
+    top: 20vh;
+  }
+
+  #inner {
+    width: 40%;
+    margin: auto;
+
+
+
+    background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+
+  }
+
+  .box {
+    padding: 20px;
+
+    top: 20%;
+
+  }
+</style>{% endblock css %}
 
 {% block body %}
+<div id="outer">
+<div class="container">
+  <div id="inner">
+<div class="box">
 
 
 <h3>Password reset complete</h3>
@@ -10,5 +38,7 @@
 <p>Your password has been set. You may go ahead and log in now.</p>
 
 <a href="/login" class="btn btn-warning">Log in</a>
+</div></div>
+</div></div>
 
  {% endblock %}
