--- a/templates/base.html
+++ b/templates/base.html
@@ -9,49 +9,79 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>{% block title %} {% endblock title %}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap" rel="stylesheet">
   {% block links %} {% endblock links %}
 
   {% block Topjs %} {% endblock Topjs %}
 
   {% block css %} {% endblock css %}
   <style>
-    *{
+    * {
       font-family: 'Baloo Bhai 2', cursive;
       padding: 0;
       margin: 0;
       z-index: 1;
     }
-    #body{
-    z-index: -200;
+
+    #j {
+      
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+
+      transition: all 2s ease-in-out;
+      height: auto;
+      overflow: hidden;
     }
 
-  
-      canvas{
-            /* position: absolute; */
-            z-index: -1;
-             width: 100%; 
-             background-image: linear-gradient( rgb(255, 183, 183), rgb(139, 249, 255)); 
-    opacity: 0.24;
-        }
-        .bg{
-          height: 140vh;
+    #body {
+      z-index: -200;
+    }
+
+    @media only screen and (max-width: 600px) {
+      #inner {
+        width: 100%;
+        margin: auto;
+
+
+
+        background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+      }
+    }
+    @media only screen and (min-width: 992px) {
+     #x{
+       display: none;
+     }
+    }
+
+
+    canvas {
+      /* position: absolute; */
+      z-index: -1;
+      width: 100%;
+      background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+      opacity: 0.24;
+    }
+
+    .bg {
+      height: 140vh;
       position: absolute;
 
-          width: 100vw;
-          z-index: -100;
-          background-image: linear-gradient( rgb(255, 183, 183), rgb(139, 249, 255)); 
-        opacity: 0.3;}
+      width: 100vw;
+      z-index: -100;
+      background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+      opacity: 0.3;
+    }
 
-        a{
-          text-decoration: none;
-          color: white;
-          font: weight 9px;
-        }
-   
+    a {
+      text-decoration: none;
+      color: white;
+      font: weight 9px;
+    }
   </style>
-  
+
 
 
 
@@ -59,73 +89,98 @@
 </head>
 
 <body>
-  <header id="j" class="p-3 bg-dark text-white" >
-    <div id="navbar" class="container">
-      <div id="navbar2" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-            <use xlink:href="#bootstrap">
+  <div id="j">
+    <header  class="p-3 bg-dark text-white">
+      <a id="x">X</a>
+      <div id="navbar" class="container">
+        <div id="navbar2" class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+              <use xlink:href="#bootstrap">
 
-            </use>
-          </svg>
-        </a>
+              </use>
+            </svg>
+          </a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" id="List">
-          <li><a href="/" class="nav-link px-2 text-secondary text-">Home</a></li>
-          <li><a href="/covidupdates" class="nav-link px-2 text-white">Covid Updates</a></li>
-          <li><a href="/donors" class="nav-link px-2 text-white">Donors</a></li>
-        
-          <li><a href="/blog" class="nav-link px-2 text-white">Blog</a></li>
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" id="List">
 
-        
-          <li><a href="/contactus" class="nav-link px-2 text-white">Contact Us</a></li>
+            <li><a href="/" class="nav-link px-2 text-white">Home</a></li>
+            <li><a href="/covidupdates" class="nav-link px-2 text-white">Covid Updates</a></li>
+            <li><a href="/donors" class="nav-link px-2 text-white">Donors</a></li>
 
-        </ul>
+            <li><a href="/blog" class="nav-link px-2 text-white">Blog</a></li>
 
 
-        {% comment %} <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-        </form> {% endcomment %}
-        {% if request.user.is_authenticated %}
-        
-    <a href="/profile" class="btn btn-info">{{request.user}}</a>
+            <li><a href="/contactus" class="nav-link px-2 text-white">Contact Us</a></li>
 
-        {% else %}
-        
-        <div class="text-end">
-        
-          <button type="button" class="btn btn-info"><a href="/login">login</a></button>
-          <button type="button" class="btn btn-warning"> <a href="/nusignup">Sign-up</a> </button>
+          </ul>
+
+
+          {% comment %} <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+            <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+          </form> {% endcomment %}
+          {% if request.user.is_authenticated %}
+
+          <a href="/profile" class="btn btn-info">{{request.user}}</a>
+
+          {% else %}
+
+          <div class="text-end">
+
+            <button type="button" class="btn btn-info"><a href="/login">login</a></button>
+            <button type="button" class="btn btn-warning"> <a href="/nusignup">Sign-up</a> </button>
+          </div>
+          {% endif %}
         </div>
-        {% endif %}
       </div>
-    </div>
-  </header>
+    </header>
+  </div>
 
-  
-  
-  
-    <div class="bg">
 
-      <canvas></canvas>
 
-    </div>
-  
+
+  <div class="bg">
+
+    <canvas></canvas>
+
+  </div>
+
+
+
+
+  {% block body %}
+
+  {% endblock body %}
+
+
+
+
+
+  {% block js %}
+  {% endblock js %}
+
+  <script>
+
     
-  
-    
-    {% block body %}
-    
-    {% endblock body %} 
-  
-  
-  
+    document.getElementById("x").addEventListener('click', () => {
+      let h = document.getElementById("j").clientHeight
+      // console.log("click",h);
+      
+        if(h<100){
+      document.getElementById("j").style.height = "auto";}
+        else{
+      document.getElementById("j").style.height = "15vh";
+      document.getElementById("j").style.transform= rotate(20);
 
-   
-   {% block js %}
-   {% endblock js %}
-   
-<script>
+
+        }
+
+
+    })
+
+
+
+
 
     var canvas = document.querySelector('canvas');
 
@@ -137,80 +192,80 @@
     // Animation
 
     var mouse = {
-        x: undefined,
-        y: undefined
+      x: undefined,
+      y: undefined
     }
 
     var maxRadius = 50;
     // var minRadius = 2;
 
     var colorArray = [
-        'red',
-        '#BB8D8D',
-        'white',
-        '#D55E5E',
-        '#5E58A2'
+      'red',
+      '#BB8D8D',
+      'white',
+      '#D55E5E',
+      '#5E58A2'
     ];
     // console.log(colorArray.length);
 
     window.addEventListener('resize', function () {
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
 
-        init();
+      init();
     });
 
     window.addEventListener('mousemove', function (event) {
-        // console.log(event);
-        mouse.x = event.x;
-        mouse.y = event.y;
-       // console.log(mouse);
+      // console.log(event);
+      mouse.x = event.x;
+      mouse.y = event.y;
+      // console.log(mouse);
     })
 
     // fucntion for making circles 
 
     function Circle(x, y, dx, dy, radius) {
-        this.x = x;
-        this.y = y;
-        this.dx = dx;
-        this.dy = dy;
-        this.radius = radius;
-        this.minRadius = radius;
-        this.color = colorArray[Math.floor(Math.random() * colorArray.length)];
+      this.x = x;
+      this.y = y;
+      this.dx = dx;
+      this.dy = dy;
+      this.radius = radius;
+      this.minRadius = radius;
+      this.color = colorArray[Math.floor(Math.random() * colorArray.length)];
 
-        this.draw = function () {
-            // console.log('krubc');
-            c.beginPath();
-            c.arc(this.x, this.y, this.radius, 0, Math.PI * 2, false);
-            // c.strokeStyle = 'yellow';
-            // c.stroke();
-            c.fillStyle = this.color;
-            c.fill();
+      this.draw = function () {
+        // console.log('krubc');
+        c.beginPath();
+        c.arc(this.x, this.y, this.radius, 0, Math.PI * 2, false);
+        // c.strokeStyle = 'yellow';
+        // c.stroke();
+        c.fillStyle = this.color;
+        c.fill();
+      }
+
+      this.update = function () {
+        if (this.x + this.radius > innerWidth || this.x - this.radius < 0) {
+          this.dx = -this.dx;
         }
 
-        this.update = function () {
-            if (this.x + this.radius > innerWidth || this.x - this.radius < 0) {
-                this.dx = -this.dx;
-            }
-
-            if (this.y + this.radius > innerHeight || this.y - this.radius < 0) {
-                this.dy = -this.dy;
-            }
-
-            this.x += this.dx;
-            this.y += this.dy;
-
-            //Interactivity
-            if (mouse.x - this.x < 50 && mouse.x - this.x > -50 && mouse.y - this.y < 50 && mouse.y - this.y > -50) {
-                if (this.radius < maxRadius) {
-                    this.radius += 1;
-                }
-            } else if (this.radius > this.minRadius) {
-                this.radius -= 1;
-            }
-
-            this.draw();
+        if (this.y + this.radius > innerHeight || this.y - this.radius < 0) {
+          this.dy = -this.dy;
         }
+
+        this.x += this.dx;
+        this.y += this.dy;
+
+        //Interactivity
+        if (mouse.x - this.x < 50 && mouse.x - this.x > -50 && mouse.y - this.y < 50 && mouse.y - this.y > -50) {
+          if (this.radius < maxRadius) {
+            this.radius += 1;
+          }
+        } else if (this.radius > this.minRadius) {
+          this.radius -= 1;
+        }
+
+        this.draw();
+      }
 
     }
 
@@ -223,45 +278,45 @@
 
     function init() {
 
-        circleArray = [];
+      circleArray = [];
 
-        for (var i = 0; i < 25; i++) {
-            var radius = Math.random() * 4 + 35;
-            var x = Math.random() * (innerWidth - radius * 2) + radius;
-            var y = Math.random() * (innerHeight - radius * 2) + radius;
-            var dx = (Math.random() - 0.5) * 8;
-            var dy = (Math.random() - 0.5) * 8;
-            circleArray.push(new Circle(x, y, dx, dy, radius));
+      for (var i = 0; i < 25; i++) {
+        var radius = Math.random() * 4 + 35;
+        var x = Math.random() * (innerWidth - radius * 2) + radius;
+        var y = Math.random() * (innerHeight - radius * 2) + radius;
+        var dx = (Math.random() - 0.5) * 8;
+        var dy = (Math.random() - 0.5) * 8;
+        circleArray.push(new Circle(x, y, dx, dy, radius));
 
-        }
+      }
 
     }
 
     function animate() {
 
-        // creating a loop using below statement by calling function inside the function itself
-        requestAnimationFrame(animate);
-        // console.log('sdchba');
+      // creating a loop using below statement by calling function inside the function itself
+      requestAnimationFrame(animate);
+      // console.log('sdchba');
 
-        c.clearRect(0, 0, innerWidth, innerHeight);
+      c.clearRect(0, 0, innerWidth, innerHeight);
 
-        for (var i = 0; i < circleArray.length; i++) {
-            circleArray[i].update();
-        }
+      for (var i = 0; i < circleArray.length; i++) {
+        circleArray[i].update();
+      }
 
     }
 
     init();
 
     animate();
-    
-</script>
+
+  </script>
 
 
 
 
 
- 
+
 </body>
 
 </html>
