--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -1,85 +1,106 @@
 {% extends 'base.html' %}
 
 {% block title %}Add Employee{% endblock title %}
+{% block css %}
+<style>
+  #outer {
+    position: relative;
+    top: 20vh;
+  }
+
+  #inner {
+    width: 60%;
+    margin: auto;
+
+
+
+    background-image: linear-gradient(rgb(255, 183, 183), rgb(139, 249, 255));
+
+  }
+
+  .box {
+    padding: 20px;
+
+    top: 20%;
+
+  }
+</style>{% endblock css %}
 
 {% block body %}
 <div class="container">
-<div id="box">
-<div class="box">
-<form action="/addpat" method="POST">
+  <div id="inner">
+    <div class="box">
+      <form action="/addpat" method="POST">
 
-  {% csrf_token %} 
-  
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Patient Username</label>
-    <input type="text"  name="pusername" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Patient name</label>
-    <input type="text"  name="pname" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Patient email</label>
-    <input type="email"  name="pemail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-    <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Patient Blood group</label>
-    <input type="text"  name="pbloodgrp" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-    <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Patient Date of Discharge</label>
-    <input type="text"  name="pdod" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-    <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Patient Age</label>
-    <input type="text"  name="p_age" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
+        {% csrf_token %}
 
-  <div class="form-group">
-    <label for="pass1">Choose a password</label>
-    <input type="password" class="form-control" id="pid1" name="pid1" placeholder="Choose Your Password" required>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Patient Username</label>
+          <input type="text" name="pusername" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Patient name</label>
+          <input type="text" name="pname" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Patient email</label>
+          <input type="email" name="pemail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Patient Blood group</label>
+          <input type="text" name="pbloodgrp" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Patient Date of Discharge</label>
+          <input type="text" name="pdod" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Patient Age</label>
+          <input type="text" name="p_age" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+
+        <div class="form-group">
+          <label for="pass1">Choose a password</label>
+          <input type="password" class="form-control" id="pid1" name="pid1" placeholder="Choose Your Password" required>
+        </div>
+        <div class="form-group">
+          <label for="pass2">Confirm Password</label>
+          <input type="password" class="form-control" id="pid2" name="pid2" placeholder="Enter your password again"
+            required>
+        </div>
+
+        <button type="submit" class="btn btn-primary my-3">Submit</button>
+      </form>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="pass2">Confirm Password</label>
-    <input type="password" class="form-control" id="pid2" name="pid2" placeholder="Enter your password again" required>
-  </div>
- 
-  <button type="submit" class="btn btn-primary my-3">Submit</button>
-</form>
-</div>
-</div>
 
 
   {% for uu in u %}
-<div class="card my-2">
-  <div class="card-header">
-    {{uu.Name}}
+  <div class="card my-2">
+    <div class="card-header">
+      {{uu.Name}}
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">{{uu.username}}</h5>
+      <a href="/delCS/{{uu.username}}" class="btn btn-danger">Delete</a>
+    </div>
   </div>
-  <div class="card-body">
-    <h5 class="card-title">{{uu.username}}</h5>
-    <a href="/delCS/{{uu.username}}" class="btn btn-danger">Delete</a>
-  </div>
-</div>
- 
-  
-  
- 
+
+
+
+
   {% endfor %}
 
 </div>
+</div>
+</div>
+</div>
 
 
- {% endblock %}
-
-
-
-
-
-
-  
+{% endblock %}
