--- a/templates/home/Covid_Updates.html
+++ b/templates/home/Covid_Updates.html
@@ -2,30 +2,23 @@
 
 {% block title %}Covid Updates{% endblock title %}
 {% block css %}
+<style>
 
+</style>
 
 {% endblock css %}
 
 
 {% block body %}
 
-<h2>Enter your Order Id and Email address to track your order</h2>
-<form method="post" action="#" id="search">{% csrf_token %}
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="inputname">Order Id</label>
-            <input type="text" class="form-control" id="orderId" name="orderId" placeholder="Order Id">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-        </div>
-        <button type="submit" class="btn btn-primary">Track Order</button>
-    </div>
-</form>
+
 
 
 <div id="cases">
+
+
+</div>
+<div id="chat">
 
 
 </div>
