--- a/templates/home/Donors.html
+++ b/templates/home/Donors.html
@@ -3,12 +3,10 @@
 {% block title %}Donors{% endblock title %}
 
 {% block body %}
-Donors :-<br><hr>
-{{r}}
 
-
-
-
-{{s}}
+   <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
 
  {% endblock %}
