--- a/templates/blog/blogPost.html
+++ b/templates/blog/blogPost.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 
 {% block title %}Blogpost{% endblock title %}
+{% block css %}
+<style>
+
+
+
+
+     
+
+ 
+</style>
+{% endblock css %}
 
 {% block body %}
 <div class="container">
-  <div class="card my-2">
+  <div class="card my-2 animatn">
     <div class="card-header">
       {{post.title}}
     </div>
