--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -58,9 +58,14 @@
                      onmousedown="if(this.options.length>5){this.size=5;}" onchange="this.blur()" onblur="this.size=0;"
                      id="state" aria-label="Default select example">
                      <option selected>Blood Group</option>
-                     <option value="1">A positive</option>
-                     <option value="2">Two</option>
-                     <option value="3">Three</option>
+                     <option value="1">A +</option>
+                     <option value="2">B +</option>
+                     <option value="3">AB +</option>
+                     <option value="4">O +</option>
+                     <option value="5">A -</option>
+                     <option value="6">B -</option>
+                     <option value="7">Ab -</option>
+                     <option value="8">O -</option>
               </select>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Patient Date of Discharge</label>
